--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-mocks": "~1.5.0",
     "html5-boilerplate": "^5.3.0",
     "angular-ui-router": "^0.4.2",
-    "gentelella": "^1.4.0"
+    "gentelella": "^1.4.0",
+    "angular-bootstrap": "^2.5.0"
   }
 }
