--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "html5-boilerplate": "^5.3.0",
     "angular-ui-router": "^0.4.2",
     "gentelella": "^1.4.0",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "js-xlsx": "^0.9.9",
+    "angular-sanitize": "^1.6.4"
   }
 }
