--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "gentelella": "^1.4.0",
     "angular-bootstrap": "^2.5.0",
     "angular-sanitize": "^1.6.4",
-    "js-xlsx-style": "^0.8.6"
+    "js-xlsx-style": "^0.8.6",
+    "file-saver": "^1.3.3"
   }
 }
