--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "angular-bootstrap": "^2.5.0",
     "angular-sanitize": "^1.6.4",
     "js-xlsx-style": "^0.8.6",
-    "file-saver": "^1.3.3"
+    "file-saver": "^1.3.3",
+    "angular-md5": "^0.1.10"
   }
 }
