--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-sanitize": "^1.6.4",
     "js-xlsx-style": "^0.8.6",
     "file-saver": "^1.3.3",
-    "angular-md5": "^0.1.10"
+    "angular-md5": "^0.1.10",
+    "angucomplete-alt": "^3.0.0"
   }
 }
