--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "js-xlsx-style": "^0.8.6",
     "file-saver": "^1.3.3",
     "angular-md5": "^0.1.10",
-    "angucomplete-alt": "^3.0.0"
+    "angucomplete-alt": "^3.0.0",
+    "tags-input": "^1.1.1"
   }
 }
